[package]
name = "zaichik"
version = "0.1.0"
authors = ["raventid <juliankul@gmail.com>"]
edition = "2018"

[dependencies]
im = "15.0.0"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3"
log = "0.4.0"
env_logger = "0.7.1"
bytes = "0.5"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }